--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -63,163 +63,201 @@ header nav .menu a:before {
 header nav .menu a:hover:before {
     width: 100%;
 }
+  
+          
+.button-64 {
+align-items: center;
+background-image: linear-gradient(144deg,#AF40FF, hotpink,#00DDEB);
+border: 0;
+box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+box-sizing: border-box;
+border-radius: 0px;
+display: flex;
+justify-content: center;
+line-height: 1em;
+color: #242424;
+font-size: medium;
+max-width: 100%;
+min-width: 140px;
+padding: 3px;
+text-decoration: none;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+white-space: nowrap;
+cursor: pointer;
 
-.Entrar {
-    margin-top: 20px;
-    padding: 0px 30px;
-
-    border-width: 4px;
-    border-style: solid;
-    border-image: linear-gradient(to right, rgb(0, 183, 255), hotpink) 2;
-    border-radius: 5px;
-    
-    background: linear-gradient(to right, rgb(0, 183, 255), hotpink);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
+.button-64:active,
+.button-64:hover {
+outline: 0;
+}
+
+.button-64 span {
+background-color: white;
+padding: 5px 25px;
+border-radius: 0px;
+width: 100%;
+height: 100%;
+transition: 300ms;
+}
+
+.button-64:hover span {
+background: none;
+color: white;
+}
+
+.mg {
+    display: block;
+    margin: 5px 0;
+    border-radius: 0;
+}
+
+.button-wrapper {
+    margin-top: 20px;
+}
 /*CSS Home - Slider Passer*/
 section {
-    padding: 100px 200px;
+padding: 100px 200px;
 }
 
 .home {
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background: #771EF5;
+position: relative;
+width: 100%;
+min-height: 100vh;
+display: flex;
+justify-content: center;
+flex-direction: column;
+background: #771EF5;
 }
 
 .home:before {
-    z-index: 777;
-    content: '';
-    position: absolute;
-    background: rgba(131, 3, 251, 0.3);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+z-index: 777;
+content: '';
+position: absolute;
+background: rgba(131, 3, 251, 0.3);
+width: 100%;
+height: 100%;
+top: 0;
+left: 0;
 }
 
 .home .content {
-    z-index: 888;
-    color:#ffffff;
-    width: 70%;
-    margin-top: 50px;
-    display: none;
+z-index: 888;
+color:#ffffff;
+width: 70%;
+margin-top: 50px;
+display: none;
 }
 
 .home .content.active {
-    display: block;
+display: block;
 }
 
 .home .content h1 {
-    font-size: 4em;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    line-height: 75px;
-    margin-bottom: 40px;
+font-size: 4em;
+font-weight: 900;
+text-transform: uppercase;
+letter-spacing: 2px;
+line-height: 75px;
+margin-bottom: 40px;
 }
 
 .home .content h1 span {
-    font-size: 1.2em;
-    font-weight: 600;
+font-size: 1.2em;
+font-weight: 600;
 }
 
 .home .content p {
-    margin-bottom: 65px;
+margin-bottom: 65px;
 }
 
 .home .content a {
-    background: #ffffff;
-    padding: 15px 35px;
-    color: #771EF5;
-    font-size: 1.1em;
-    font-weight: 500;
-    text-decoration: none;
-    border-radius: 5px;
+background: #ffffff;
+padding: 15px 35px;
+color: #771EF5;
+font-size: 1.1em;
+font-weight: 500;
+text-decoration: none;
+border-radius: 5px;
 }
 
 .home .media-icons {
-    z-index: 888;
-    position: absolute;
-    right: 30px;
-    display: flex;
-    flex-direction:column;
-    transition: 0.5s ease;
+z-index: 888;
+position: absolute;
+right: 30px;
+display: flex;
+flex-direction:column;
+transition: 0.5s ease;
 }
 
 .home .media-icons a{
-    color: white;
-    font-size: 1.6em;
-    transition: 0.3s ease;
+color: white;
+font-size: 1.6em;
+transition: 0.3s ease;
 }
 
 .home .media-icons a:not(:last-child) {
-    margin-bottom: 20px;
+margin-bottom: 20px;
 }
 
 .home .media-icons a:hover{
-    transform: scale(1.3);
+transform: scale(1.3);
 }
 
 .home video {
-    z-index: 000;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+z-index: 000;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+object-fit: cover;
 }
 
 .slider-nav {
-    z-index: 888;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: translateY(80px);
-    margin-bottom: 12px;
+z-index: 888;
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+transform: translateY(80px);
+margin-bottom: 12px;
 }
 
 .slider-nav .slider-nav-btn {
-    width: 12px;
-    height: 12px;
-    background: #fff;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
-    transition: 0.3s ease;
+width: 12px;
+height: 12px;
+background: #fff;
+border-radius: 50%;
+cursor: pointer;
+box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+transition: 0.3s ease;
 }
 
 .slider-nav .slider-nav-btn.active{
-    background:#771EF5;
+background:#771EF5;
 }
 
 .slider-nav .slider-nav-btn:not(:last-child){
-    margin-right: 20px;
+margin-right: 20px;
 }
 
 .slider-nav .slider-nav-btn:hover {
-    transform: scale(1.2);
+transform: scale(1.2);
 }
 
 .video-slide {
-    position: absolute;
-    width: 100%;
-    clip-path: circle(0% at 0 50%);
+position: absolute;
+width: 100%;
+clip-path: circle(0% at 0 50%);
 }
 
 .video-slide.active {
-    clip-path: circle(150% at 0 50%);
-    transition: 2s ease;
-    transition-property: clip-path;
+clip-path: circle(150% at 0 50%);
+transition: 2s ease;
+transition-property: clip-path;
 }
 
 /*Media Query CSS Home - Slider Passer + NavBar*/
