--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,14 +60,31 @@
 					</ul>
 					<div class="tab-content" id="myTabContent" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
 						<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+
 							<p class="material-icons" style="font-size: 64px; display: block;">account_circle</p>
-							<input type="text" placeholder="E-mail ou Apelido" style="display: block;">
-							<input type="password" placeholder="Senha" style="display: block;">
-							<button type="button" class="Entrar">Entrar</button>
+							<input type="text" placeholder="E-mail ou Apelido" class="mg">
+							<input type="password" placeholder="Senha" class="mg">
+							
+							<div class="button-wrapper" data-tippy-content="Click to copy button 64">
+								<button class="button-64" role="button">
+									<span class="text">Entrar</span>
+								</button>
+							</div>
 						</div>
 
 						<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-							Cadastro novo
+
+							<input type="text" placeholder="Nome" class="mg" style="margin-top: 20px;">
+							<input type="text" placeholder="E-mail" class="mg">
+							<input type="password" placeholder="Senha" class="mg">
+							<input type="password" placeholder="Confimação de senha" class="mg">
+							
+							<div class="button-wrapper" data-tippy-content="Click to copy button 64">
+								<button class="button-64" role="button">
+									<span class="text">Cadastrar</span>
+								</button>
+							</div>
+
 						</div>
 					</div>
 
