--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -64,48 +64,57 @@ header nav .menu a:hover:before {
     width: 100%;
 }
   
-          
+.icon-entrar {
+    background-image: linear-gradient(144deg,#AF40FF, hotpink,#00DDEB);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 64px; 
+    display: block;
+    margin: 30px 0;
+}
+
 .button-64 {
-align-items: center;
-background-image: linear-gradient(144deg,#AF40FF, hotpink,#00DDEB);
-border: 0;
-box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-box-sizing: border-box;
-border-radius: 0px;
-display: flex;
-justify-content: center;
-line-height: 1em;
-color: #242424;
-font-size: medium;
-max-width: 100%;
-min-width: 140px;
-padding: 3px;
-text-decoration: none;
-user-select: none;
--webkit-user-select: none;
-touch-action: manipulation;
-white-space: nowrap;
-cursor: pointer;
+    align-items: center;
+    background-image: linear-gradient(144deg,#AF40FF, hotpink,#00DDEB);
+    border: 0;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    border-radius: 0px;
+    display: flex;
+    justify-content: center;
+    line-height: 1em;
+    color: #242424;
+    font-size: medium;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
 
 }
 
 .button-64:active,
 .button-64:hover {
-outline: 0;
+    outline: 0;
 }
 
 .button-64 span {
-background-color: white;
-padding: 5px 25px;
-border-radius: 0px;
-width: 100%;
-height: 100%;
-transition: 300ms;
+    background-color: white;
+    padding: 5px 25px;
+    border-radius: 0px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
 }
 
 .button-64:hover span {
-background: none;
-color: white;
+    background: none;
+    color: white;
 }
 
 .mg {
