--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,8 +59,7 @@
 					</ul>
 					<div class="tab-content" id="myTabContent" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
 						<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-						<!--<p class="material-icons" style="font-size: 64px; display: block;">account_circle</p> -->
-							<img src="/public/IMGS/boy-dynamic-gradient.png" style="display: block; width: 100px;">
+							<p class="material-icons icon-entrar">account_circle</p>
 							<input type="text" placeholder="E-mail ou Apelido" class="mg">
 							<input type="password" placeholder="Senha" class="mg">
 							<div class="button-wrapper" data-tippy-content="Click to copy button 64">
@@ -71,9 +70,9 @@
 						</div>
 
 						<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-
-							<input type="text" placeholder="Nome" class="mg" style="margin-top: 20px;" id="nome">
-							<input type="text" placeholder="Sobrenome" class="mg" id="sobrenome">
+							<p class="material-icons icon-entrar">person_add_alt_1</p>
+							<input type="text" placeholder="Nome" class="mg" style="display: inline-block;" id="nome">
+							<input type="text" placeholder="Sobrenome" class="mg" id="sobrenome" style="display: inline-block;">
 							<input type="text" placeholder="Apelido" class="mg" id="apelido">
 							<input type="text" placeholder="E-mail" class="mg" id="email">
 							<input type="password" placeholder="Senha" class="mg" id="senha">
