--- a/views/index/explore.ejs
+++ b/views/index/explore.ejs
@@ -2,20 +2,20 @@
 
 <h2>Conheça nossos diferentes artistas</h2>
 
-<h3>Artista 1</h3>
+<h3>Surrealistas</h3>
 
 <div class="glide espacamento" id="glide1">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/caos2_FelipeCalazans.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/capitao-flora_VictorLins.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/flying-whales-marioKoller.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/LuarUrbanos_TonioloNeto.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/metamorphosis-i_Ongarelli.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/PlanetaryTransitions_AdamLenzi.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/winter-ii_AugustoLima.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/hope_mys.jpg);"></div>
+          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/skull-ii_MarceloMantovani.jpg);"></div>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
